--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <title>js-pwdgen-wannabe</title>
 </head>
 <body>    
-    <h1>Benvenuto crea la tua Sicurissima Password</h1>        
-    
+    <div class="box">
+    <h1>Benvenuto crea la tua INSicurissima Password</h1>    
+    <p id="password">PASSWORD</>    
+    </div>
     <script src="pwdgen.js"></script>
 </body>
 </html>
