--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 </head>
 <body>    
     <div class="box">
-    <h1>Benvenuto crea la tua INSicurissima Password</h1>    
-    <p id="password">PASSWORD</>    
+    <h1>Benvenuto crea la tua INSicurissima Password: </h1>    
+    <p id="password">PASSWORD</>   
+    <p id="password2">PASSWORD casuale</>        
     </div>
     <script src="pwdgen.js"></script>
 </body>
